--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "jocular-octo-meow",
   "version": "0.0.1",
   "dependencies": {
-    "express": "2.x.x"
-    },
-    "engines": {
-      "node": "0.8.x",
-      "npm": "1.1.x"
-    },
+    "express": "2.x.x",
+    "leaflet-search": "^1.8.4"
+  },
+  "engines": {
+    "node": "0.8.x",
+    "npm": "1.1.x"
+  },
   "scripts": {
     "start": "node server.js"
   }
